feat: configure PostgreSQL connection in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,17 @@ jira.domain=${JIRA_DOMAIN}
 jira.id=${JIRA_ID}
 jira.token=${JIRA_TOKEN}
 
-# H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/jiradb
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+# JPA HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+
+# Hibernate dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Optional logging
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
